--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -7,11 +7,14 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>{% if title %}{{ title }}{% else %}K-Telecom{% endif %}</title>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+	<link rel="stylesheet" href="static/css/style.css">
 </head>
 <body>
 	<div class="container">
 		{% block content %}
 		{% endblock %}
 	</div>
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+	<script type="text/javascript" src="static/js/script.js"></script>
 </body>
 </html>
