--- a/app/templates/edit_row.html
+++ b/app/templates/edit_row.html
@@ -5,63 +5,39 @@
 	<form action="" method="post" class="m-3" role="form" novalidate>
 		{{ form.csrf_token() }}
 		<div class="form-group">
-			{{ form.cp_name.label }} {{ form.cp_name(class="form-control") }}
+			{{ form.name.label }} {{ form.name }}
 		</div>
 		<div class="form-group">
-			{{ form.cp_type.label }}
-			<select class='custom-select'>
-				{% for ch in form.cp_type.choices %}
-					<option value="{{ ch[0] }}">{{ ch[1] }}</option>
-				{% endfor %}
-			</select>
+			{{ form.type.label }} {{ form.type }}
 		</div>
 		<div class="form-check">
-			{{ form.cp_vip(class="form-check-input") }} {{ form.cp_vip.label }}
+			{{ form.vip }} {{ form.vip.label }}
 		</div>
 		<div class="form-group">
-			{{ form.cp_location.label }} {{ form.cp_location(class="form-control") }}
+			{{ form.locality.label }} {{ form.locality }}
 		</div>
 		<div class="form-group">
-			{{ form.cp_service_type.label }}
-			<select class='custom-select'>
-				{% for ch in form.cp_service_type.choices %}
-					<option value="{{ ch[0] }}">{{ ch[1] }}</option>
-				{% endfor %}
-			</select>
+			{{ form.service_type.label }} {{ form.service_type }}
 		</div>
 		<div class="form-group">
-			{{ form.cp_vlan_address_to.label }}
-			{{ form.cp_vlan_address_to(class='form-control', rows='1', placeholder=form.cp_vlan_address_to.description) }}
+			{{ form.vlan_address_from.label }} {{ form.vlan_address_from }}
 		</div>
 		<div class="form-group">
-			{{ form.cp_vlan_address_from.label }}
-			{{ form.cp_vlan_address_from(class='form-control', rows='1', placeholder=form.cp_vlan_address_to.description) }}
+			{{ form.vlan_address_to.label }} {{ form.vlan_address_to }}
 		</div>
 		<div class="form-group">
-			{{ form.cp_channel_width.label }}
-			<select class='custom-select'>
-				{% for ch in form.cp_channel_width.choices %}
-					<option value="{{ ch[0] }}">{{ ch[1] }}</option>
-				{% endfor %}
-			</select>
+			{{ form.channel_width.label }} {{ form.channel_width }}
 		</div>
 		<div class="form-group">
-			{{ form.cp_request_date.label }}
-			{{ form.cp_request_date(type='date', class="form-control") }}
+			{{ form.date_of_request.label }} {{ form.date_of_request }}
 		</div>
 		<div class="form-group">
-			{{ form.cp_information_source.label }}
-			{{ form.cp_information_source(class='form-control', rows='2') }}
+			{{ form.information_source.label }} {{ form.information_source }}
 		</div>
 		<div class="form-group">
-			{{ form.cp_responsible_manager.label }}
-			<select class='custom-select'>
-				{% for ch in form.cp_responsible_manager.choices %}
-					<option value="{{ ch[0] }}">{{ ch[1] }}</option>
-				{% endfor %}
-			</select>
+			{{ form.responsible_manager.label }} {{ form.responsible_manager }}
 		</div>
-		{{ form.submit(class='btn btn-dark btn-block') }}
+		{{ form.submit }}
 	</form>
 
 
